--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/aos/dist/aos.css"
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/scrollreveal/dist/scrollreveal.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -88,10 +89,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/aos/dist/aos.css"
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/scrollreveal/dist/scrollreveal.min.js"
+            ]
           }
         }
       }
